--- a/script/config/exp001_gray-matter_mmse.yaml
+++ b/script/config/exp001_gray-matter_mmse.yaml
@@ -1,10 +1,10 @@
 # 1. 実験の基本情報
 experiment_name: "MMSE_Prediction"
-run_name: "Simple3DCNN_on_Gray-matter"
+run_name: "Simple3DCNN_on_Gray-matter_to_MMSE"
 
 # 2. データの指定
 data:
-  pickle_path: "/home/matsuda/ad_project/data/pickle_data/dataset_gray-matter.pkl"
+  pickle_path: "~/ad_project/data/pickle_data/dataset_gray-matter.pkl"
   target_variable: "MMSE"
   tabular_input_features: []
 
@@ -16,9 +16,14 @@ model:
 
 # 4. 学習のパラメータ
 training:
-  optimizer: "Adam"
+  optimizer:
+    name: "Adam"
+    params:
+      learning_rate: 0.001
+
   loss: "mean_squared_error"
   batch_size: 8
+
   stages:
     - stage_name: "WarmupPhase"
       epochs: 50
