--- a/script/config/exp001_gray-matter_mmse.yaml
+++ b/script/config/exp001_gray-matter_mmse.yaml
@@ -4,7 +4,7 @@ run_name: "Simple3DCNN_on_Gray-matter_to_MMSE"
 
 # 2. データの指定
 data:
-  pickle_path: "~/ad_project/data/pickle_data/dataset_gray-matter.pkl"
+  pickle_path: "data/pickle_data/dataset_gray-matter.pkl"
   target_variable: "MMSE"
   tabular_input_features: []
 
