--- a/src/config/exp002_gray-matter_mmse.yaml
+++ b/src/config/exp002_gray-matter_mmse.yaml
@@ -1,10 +1,10 @@
-# script/config/exp001_gray-matter_mmse.yaml
+# src/config/exp002_gray-matter_mmse.yaml
 # input: gray matter
 # output: MMSE
 
 # 1. 実験の基本情報
 experiment_name: "MMSE_Prediction"
-run_name: "Simple3DCNN_on_Gray-matter_to_MMSE"
+run_name: "3DResNet_on_Gray-matter_to_MMSE"
 
 # 2. データの指定
 data:
@@ -14,7 +14,7 @@ data:
 
 # 3. モデルの指定
 model:
-  name: "Simple3DCNN"
+  name: "3DResNet"
   params: 
     dropout_rate: 0.3
 
